# hs293math

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: hs293go_mathConfig.cmake.in
include/hs293go/: eigen_utils.hpp  frame_conversions.hpp  geo.hpp  math.hpp  nn.hpp  rigid_transform.hpp  rotation.hpp
tests/: CMakeLists.txt
tests/golden/: rotation_goldens.safetensors
tests/src/: gen_rotation_goldens.cpp  test_frame_conversions.cpp  test_geo.cpp  test_math.cpp  test_nn.cpp  test_rigid_transform.cpp  test_rotation.cpp
